// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField when disabled renders 1`] = `
<div>
  <div
    class="padded base"
  >
    <div
      class="wrapper disabled"
    >
      <div
        class="inputWrapper"
      >
        <label
          class="label"
          for="123e4567-e89b-12d3-a456-426655440009"
        />
        <input
          class="input"
          disabled=""
          id="123e4567-e89b-12d3-a456-426655440009"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`FormField when small renders 1`] = `
<div>
  <div
    class="padded base"
  >
    <div
      class="wrapper small"
    >
      <div
        class="inputWrapper"
      >
        <label
          class="label"
          for="123e4567-e89b-12d3-a456-426655440005"
        />
        <input
          class="input"
          id="123e4567-e89b-12d3-a456-426655440005"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`FormField with no props renders 1`] = `
<div>
  <div
    class="padded base"
  >
    <div
      class="wrapper"
    >
      <div
        class="inputWrapper"
      >
        <label
          class="label"
          for="123e4567-e89b-12d3-a456-426655440001"
        />
        <input
          class="input"
          id="123e4567-e89b-12d3-a456-426655440001"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;
